
The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.02**

***	Add Netlist::Net->value containing parameter values.  [Ron D Smith]

****	Support +=, -=, etc assignment operators.

****	Fix syntax error when "`include `defname" is ifdefed.  [John Dickol]

****	Fix compile errors under Fedora 9, GCC 4.3.0.  [by Jeremy Bennett]

* Verilog::Language 3.025 2008/05/07

****	Fix "output reg name=expr;" bug34649 syntax error.  [Martin Scharrer]

****	Fix functions with "input integer".  [Johan Wouters]

****	Fix bug introduced in 3.024 with parametrized defines.

****	Fix compiler warnings under GCC 4.2.1.

****	Fix "endclass" keyword misspelling.  [John Dickol]

****	Fix preprocessor `else after series of `elsif.  [Mark Nodine]

****	Fix parametrized defines calling define with comma.  [Joshua Wise]

* Verilog::Language 3.024 2008/04/02

***	Verilog::Parser will now start parsing using the keywords
	based on the Verilog::Language::language_standard setting.

****	Fix vhier ignoring --language option.  [Martin Scharrer]

****	Fix SystemVerilog parameterized defines with `` expansion,
	and fix extra whitespace inserted on substitution. [Vladimir Matveyenko]

****	Fix missing uwire keyword in Verilog::Language. [Jonathan David]

****	Fix parse error on min:typ:max delay pairs, bug34575. [Martin Scharrer]

* Verilog::Language 3.023 2008/02/12

****	Fix arrayed input/output pins.  [Thomas Ziller]

****	Fix "output reg unsigned" parse error.

* Verilog::Language 3.022 2008/01/15

***	Add ignoring of SystemVerilog enumerations.  [Thomas Ziller]

****	Fix begin_keywords 1800-2005 error introduced in last release.

* Verilog::Language 3.021 2008/01/07

****	Fix endclass keyword parsing.  [David Plumb]

****	Fix "://" parsing as ":/" operator instead of comment. [Mark Nodine]

* Verilog::Language 3.020 2007/12/03

**	Add SystemVerilog logic types.  [Thomas Ziller]