@@ -79,4 +79,8 @@ verilog/inc4.v:6: `line 6 "verilog/inc4.v" 2
 verilog/inc4.v:6: `line 134 "verilog/inc1.v" 0
 verilog/inc1.v:137: `line 137 "verilog/inc1.v" 0
 verilog/inc1.v:142: `line 142 "verilog/inc1.v" 0
-verilog/inc1.v:143: `line 143 "verilog/inc1.v" 2
+verilog/inc1.v:148: $blah("ab,cd","e,f");
+verilog/inc1.v:149: $blah(this.log,vec);
+verilog/inc1.v:150: $blah(this.log,vec[1,2,3]);
+verilog/inc1.v:151: $blah(this.log,{blah.name(), " is not foo"});
+verilog/inc1.v:152: `line 152 "verilog/inc1.v" 2
